Ajout page Dynamique logements-population à Rennes

--- a/accessibilite.html
+++ b/accessibilite.html
@@ -22,6 +22,7 @@
     </div>
 
 
+
   <nav>
     <a href="index.html">Mon parcours</a>
 
@@ -31,10 +32,10 @@
       </button>
 
       <ul class="dropdown-content" id="menu-projets" hidden>
-         <li><a href="site.html">Création du site</a></li>
+        <li><a href="site.html">Création du site</a></li>
         <li><a href="accessibilite.html">Accessibilité du site</a></li>
-                <li><a href="jishotoanki.html">Jisho to Anki</a></li>
-                
+        <li><a href="renneslogements.html">Étude : Dynamique logements-population à Rennes</a></li>
+        <li><a href="jishotoanki.html">Jisho to Anki</a></li>        
       </ul>
     </div>
     <div class="dropdown">
@@ -52,6 +53,7 @@
 
     <a href="contact.html">Contacts</a>
   </nav>
+
 
 
 
