--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
 
 <body>
 
+
   <nav>
     <a href="index.html">Mon parcours</a>
 
@@ -26,10 +27,10 @@
       </button>
 
       <ul class="dropdown-content" id="menu-projets" hidden>
-         <li><a href="site.html">Création du site</a></li>
+        <li><a href="site.html">Création du site</a></li>
         <li><a href="accessibilite.html">Accessibilité du site</a></li>
-                <li><a href="jishotoanki.html">Jisho to Anki</a></li>
-                
+        <li><a href="renneslogements.html">Étude : Dynamique logements-population à Rennes</a></li>
+        <li><a href="jishotoanki.html">Jisho to Anki</a></li>        
       </ul>
     </div>
     <div class="dropdown">
@@ -47,6 +48,7 @@
 
     <a href="contact.html">Contacts</a>
   </nav>
+
 
 
 
