--- a/site.html
+++ b/site.html
@@ -26,6 +26,7 @@
   </div>
 
 
+
   <nav>
     <a href="index.html">Mon parcours</a>
 
@@ -35,10 +36,10 @@
       </button>
 
       <ul class="dropdown-content" id="menu-projets" hidden>
-         <li><a href="site.html">Création du site</a></li>
+        <li><a href="site.html">Création du site</a></li>
         <li><a href="accessibilite.html">Accessibilité du site</a></li>
-                <li><a href="jishotoanki.html">Jisho to Anki</a></li>
-                
+        <li><a href="renneslogements.html">Étude : Dynamique logements-population à Rennes</a></li>
+        <li><a href="jishotoanki.html">Jisho to Anki</a></li>        
       </ul>
     </div>
     <div class="dropdown">
@@ -56,6 +57,7 @@
 
     <a href="contact.html">Contacts</a>
   </nav>
+
 
 
 
