--- a/renneslogements.html
+++ b/renneslogements.html
@@ -108,7 +108,7 @@ Langages utilisés :  <br>
   <img src="./logrennes/pyramide age.png" alt="Pyramide des âges à Rennes en 2022" role="group" aria-roledescription="slide" aria-label="1 sur 4" class="slide" onclick="openLightbox(this)" >
   <img src="./logrennes/Répartition des types de ménages (2022)2.png" class="slide" role="group" aria-roledescription="slide" aria-label="2 sur 4" alt="Répartition des types de ménages"  onclick="openLightbox(this)" >
   <img src="./logrennes/Répartition des familles par nombre d'enfants de moins de 25 ans (2022)2.png" role="group" aria-roledescription="slide" aria-label="3 sur 4" class="slide" alt="Répartition des familles par nombre d'enfants de moins de 25 ans (2022)"  onclick="openLightbox(this)" >
-  <img src="./logrennes/Variation relative du nombre de ménages entre 2011 et 2022 (%).png" role="group" aria-roledescription="slide" aria-label="4 sur 4" alt="Variation relative du nombre de ménages entre 2011 et 2022 (%)" class="slide" onclick="openLightbox(this)" >
+  <img src="./logrennes/Variation relative du nombre de ménages entre 2011 et 2022.png" role="group" aria-roledescription="slide" aria-label="4 sur 4" alt="Variation relative du nombre de ménages entre 2011 et 2022 (%)" class="slide" onclick="openLightbox(this)" >
 
   </div>
 
@@ -128,7 +128,7 @@ Langages utilisés :  <br>
   </button>
 
   <button class="thumb" data-index="3" aria-label="Aller à l'image 4 sur 4">
-    <img src="./logrennes/Variation relative du nombre de ménages entre 2011 et 2022 (%).png" alt="">
+    <img src="./logrennes/Variation relative du nombre de ménages entre 2011 et 2022.png" alt="">
   </button>
 </div>
 
