--- a/blog.html
+++ b/blog.html
@@ -86,31 +86,41 @@
       <option value="ia">Intelligence Artificielle</option>
     </select>
 
-    <!-- Grille des projets -->
-    <div id="projectsGrid" class="grid">
-      <a href="accessibilite.html" class="project" data-tags="web" role="button" tabindex="0"
+            <!-- Grille des projets -->
+                   <div id="projectsGrid" class="grid">
+
+<a href="site.html" class="project" data-tags="web" role="button" tabindex="0"
+        onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
+
+        <h3>Création de ce site</h3>
+        <p>Premier projet web 🌐</p>
+
+      </a>
+
+                <a href="accessibilite.html" class="project" data-tags="web handicap" role="button" tabindex="0"
         onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
 
         <h3>Accessibilité du site</h3>
-        <p>Un projet Web basé sur le RGAA ♿</p>
+        <p>Projet web basé sur le RGAA ♿️</p>
 
       </a>
-      <div class="project" data-tags="crypto" role="button" tabindex="0"
+
+<a href="jishotoanki.html" class="project" data-tags="web" role="button" tabindex="0"
         onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
-        <h3>Projet 2</h3>
-        <p>Un projet sur la cryptographie.</p>
-      </div>
-      <div class="project" data-tags="ia" role="button" tabindex="0"
+
+        <h3>Jisho to Anki</h3>
+        <p>Une extension Firefox de dictionnaire 🇯🇵</p>
+
+      </a>
+
+                <a href="renneslogements.html" class="project" data-tags="data" role="button" tabindex="0"
         onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
-        <h3>Projet 3</h3>
-        <p>Un projet basé sur l'IA.</p>
-      </div>
-      <div class="project" data-tags="web crypto" role="button" tabindex="0"
-        onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
-        <h3>Projet 4</h3>
-        <p>Un projet Web & Crypto.</p>
-      </div>
-    </div>
+
+        <h3>Étude statistique 📊</h3>
+        <p>Dynamique logements-population à Rennes</p>
+
+      </a>
+            </div>
     <br><br><br>
   </section>
 
