Ajout du moteur de recherche

--- a/amenagements.html
+++ b/amenagements.html
@@ -188,21 +188,21 @@
         <br /><br />
       </h2>
 
-      <!-- Barre de recherche -->
-      <input type="text" id="searchBar" placeholder="Rechercher un projet..." />
+    <!-- Barre de recherche -->
+    <input type="text" id="searchBar" placeholder="Rechercher un projet..." />
 
-      <!-- Menu déroulant pour filtrer par tags -->
-      <select id="filterTags" aria-label="Filtrer par catégorie">
-        <option value="all">Tous</option>
-        <option value="web">Web</option>
-        <option value="crypto">Cryptographie</option>
-        <option value="ia">Intelligence Artificielle</option>
-      </select>
+    <!-- Menu déroulant pour filtrer par tags -->
+    <select id="filterTags" aria-label="Filtrer par catégorie">
+      <option value="all">Tous</option>
+      <option value="web">Web</option>
+      <option value="Data">Data</option>
+      <option value="crypto">Cryptographie</option>
+    </select>
 
-             <!-- Grille des projets -->
+            <!-- Grille des projets -->
                    <div id="projectsGrid" class="grid">
 
-<a href="site.html" class="project" data-tags="web" role="button" tabindex="0"
+<a href="site.html" class="project" data-tags="Web" role="button" tabindex="0"
         onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
 
         <h3>Création de ce site</h3>
@@ -210,7 +210,7 @@
 
       </a>
 
-                <a href="accessibilite.html" class="project" data-tags="web handicap" role="button" tabindex="0"
+                <a href="accessibilite.html" class="project" data-tags="Web Handicap" role="button" tabindex="0"
         onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
 
         <h3>Accessibilité du site</h3>
@@ -218,7 +218,7 @@
 
       </a>
 
-<a href="jishotoanki.html" class="project" data-tags="web" role="button" tabindex="0"
+<a href="jishotoanki.html" class="project" data-tags="Web" role="button" tabindex="0"
         onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
 
         <h3>Jisho to Anki</h3>
@@ -226,7 +226,7 @@
 
       </a>
 
-                <a href="renneslogements.html" class="project" data-tags="data" role="button" tabindex="0"
+                <a href="renneslogements.html" class="project" data-tags="Data" role="button" tabindex="0"
         onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
 
         <h3>Étude statistique 📊</h3>
@@ -234,8 +234,17 @@
 
       </a>
             </div>
-      <br /><br /><br />
-    </section>
+
+    <div id="noResults" style="font-style: italic;display:none; margin-top:20px; font-size:20px;">
+      <br><br>
+  Projets à venir... ⏳
+  <br><br><br><br>
+  </div>
+   
+            
+    <br><br><br>
+  </section>
+
 
     <section id="contact" class="section contact">
       <h2><br /><br />Contacts<br /></h2>
@@ -260,5 +269,6 @@
 
     <script src="script.js"></script>
     <script src="nav.js"></script>
+    <script src="recherche.js"></script>
   </body>
 </html>
