--- a/jishotoanki.html
+++ b/jishotoanki.html
@@ -142,14 +142,14 @@ Langages utilisés :  <br>
     <select id="filterTags" aria-label="Filtrer par catégorie">
       <option value="all">Tous</option>
       <option value="web">Web</option>
+      <option value="Data">Data</option>
       <option value="crypto">Cryptographie</option>
-      <option value="ia">Intelligence Artificielle</option>
     </select>
 
             <!-- Grille des projets -->
                    <div id="projectsGrid" class="grid">
 
-<a href="site.html" class="project" data-tags="web" role="button" tabindex="0"
+<a href="site.html" class="project" data-tags="Web" role="button" tabindex="0"
         onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
 
         <h3>Création de ce site</h3>
@@ -157,7 +157,7 @@ Langages utilisés :  <br>
 
       </a>
 
-                <a href="accessibilite.html" class="project" data-tags="web handicap" role="button" tabindex="0"
+                <a href="accessibilite.html" class="project" data-tags="Web Handicap" role="button" tabindex="0"
         onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
 
         <h3>Accessibilité du site</h3>
@@ -165,7 +165,7 @@ Langages utilisés :  <br>
 
       </a>
 
-<a href="jishotoanki.html" class="project" data-tags="web" role="button" tabindex="0"
+<a href="jishotoanki.html" class="project" data-tags="Web" role="button" tabindex="0"
         onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
 
         <h3>Jisho to Anki</h3>
@@ -173,7 +173,7 @@ Langages utilisés :  <br>
 
       </a>
 
-                <a href="renneslogements.html" class="project" data-tags="data" role="button" tabindex="0"
+                <a href="renneslogements.html" class="project" data-tags="Data" role="button" tabindex="0"
         onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
 
         <h3>Étude statistique 📊</h3>
@@ -181,10 +181,17 @@ Langages utilisés :  <br>
 
       </a>
             </div>
+
+    <div id="noResults" style="font-style: italic;display:none; margin-top:20px; font-size:20px;">
+      <br><br>
+  Projets à venir... ⏳
+  <br><br><br><br>
+  </div>
+   
+            
     <br><br><br>
   </section>
 
-  </section>
 
 
 
@@ -215,7 +222,7 @@ Langages utilisés :  <br>
   <script src="script.js"></script>
   <script src="nav.js">    </script>
       <script src="lightbox.js"></script>
-
+<script src="recherche.js"></script>
 
 </body>
 
