Ajout page projets

--- a/anomaliesdepensescommunes.html
+++ b/anomaliesdepensescommunes.html
@@ -56,6 +56,7 @@ h3{
         <li><a href="renneslogements.html">Étude : Dynamique logements-population à Rennes</a></li>
         <li><a href="jishotoanki.html">Jisho to Anki</a></li>        
         <li><a href="anomaliesdepensescommunes.html">Data mining : Détection d’anomalies dans les dépenses publiques des communes </a></li>
+        <li><a style="text-decoration: underline;" href="projet.html">Voir tout</a></li>
       </ul>
     </div>
     <div class="dropdown">
