--- a/blog.html
+++ b/blog.html
@@ -35,6 +35,7 @@
         <li><a href="accessibilite.html">Accessibilité du site</a></li>
         <li><a href="renneslogements.html">Étude : Dynamique logements-population à Rennes</a></li>
         <li><a href="jishotoanki.html">Jisho to Anki</a></li>        
+        <li><a style="text-decoration: underline;" href="projet.html">Voir tout</a></li>
       </ul>
     </div>
     <div class="dropdown">
