--- a/projet.html
+++ b/projet.html
@@ -29,6 +29,7 @@
         <li><a href="accessibilite.html">Accessibilité du site</a></li>
         <li><a href="renneslogements.html">Étude : Dynamique logements-population à Rennes</a></li>
         <li><a href="jishotoanki.html">Jisho to Anki</a></li>        
+        <li><a style="text-decoration: underline;" href="projet.html">Voir tout</a></li>     
       </ul>
     </div>
     <div class="dropdown">
@@ -81,6 +82,7 @@
       <option value="crypto">Cryptographie</option>
     </select>
 
+<br><br><br>    
             <!-- Grille des projets -->
                    <div id="projectsGrid" class="grid">
 
@@ -115,6 +117,19 @@
         <p>Dynamique logements-population à Rennes</p>
 
       </a>
+
+      </a>
+
+                <a href="anomaliesdepensescommunes.html" class="project" data-tags="Data" role="button" tabindex="0"
+        onkeydown="if(event.key === 'Enter' || event.key === ' ') openLightbox(this)">
+
+        <h3>Data Mining 🗂️ ⚒️</h3>
+        <p>Détection d'anomalies comptables des communes</p>
+
+      </a>
+
+
+
             </div>
 
     <div id="noResults" style="font-style: italic;display:none; margin-top:20px; font-size:20px;">
