--- a/jardin.html
+++ b/jardin.html
@@ -32,7 +32,8 @@
         <li><a href="site.html">Création du site</a></li>
         <li><a href="accessibilite.html">Accessibilité du site</a></li>
         <li><a href="renneslogements.html">Étude : Dynamique logements-population à Rennes</a></li>
-        <li><a href="jishotoanki.html">Jisho to Anki</a></li>        
+        <li><a href="jishotoanki.html">Jisho to Anki</a></li>      
+        <li><a style="text-decoration: underline;" href="projet.html">Voir tout</a></li>  
       </ul>
     </div>
     <div class="dropdown">
